<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="navigation_title">Navigation Bar</string>
    <string name="bottom_nav_navigation_title">Use Navigation Bar</string>
    <string name="bottom_nav_navigation_summary">Use software buttons for navigation</string>
    <string name="navbar_interface_title">Interface</string>
    <string name="navbar_size">Bar size</string>
    <string name="navbar_mode">Navigation mode</string>
    <string name="navbar_mode_summary">Select which navigation mode to use on your device</string>
    <string name="navbar_visibility">Allow navigation bar</string>
    <string name="navigationbar_settings_summary">Customize navigation style and behavior</string>
    <string name="navbar_general_title">Advanced</string>
    <string name="navigation_bar_left_title">Left-handed mode</string>
    <string name="navigation_bar_left_summary">Place the navigation bar on the left side of the screen in landscape mode</string>
    <string name="smartbar_interface">SmartBar</string>
    <string name="icon_pack_picker_dialog_title">Icon packs</string>
    <string name="image_exceeds_max_allowed_size">Image must not exceed 512x512</string>
    <string name="invalid_icon_from_uri">Unable to load image from content provider</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="default_string">Stock</string>
    <string name="default_settings">Stock settings</string>
    <string name="default_settings_summary">Stock AOSP navigation bar</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="fling_settings">Fling settings</string>
    <string name="fling_settings_summary">A very unique and fully-customizable gesture-based navigation bar</string>
    <string name="fling_interface">Fling</string>
    <string name="fling_enable_title">Enable Fling</string>
    <string name="fling_back_home_policy">Back and Home are required to be set at all times. To change a Back or Home assignment, set the desired assignment first.\n\nAlso, setting a double tap action will delay single tap a bit.</string>
    <string name="fling_split_bar_policy">When only a right or left action is assigned, the action applies to the full bar.</string>
    <string name="fling_def_summary">No action set</string>
    <string name="fling_swipe_actions">Swipe Gestures</string>
    <string name="fling_tap_actions">Tap Gestures</string>
    <string name="fling_short_swipe_right">Right short swipe</string>
    <string name="fling_short_swipe_left">Left short swipe</string>
    <string name="fling_long_swipe_right">Right long swipe</string>
    <string name="fling_long_swipe_left">Left long swipe</string>
    <string name="fling_right_up_swipe">Right side swipe up</string>
    <string name="fling_left_up_swipe">Left side swipe up</string>
    <string name="fling_single_tap">Single tap right</string>
    <string name="fling_double_tap">Double tap right</string>
    <string name="fling_long_press">Long press right</string>
    <string name="fling_single_left_tap">Single tap left</string>
    <string name="fling_double_left_tap">Double tap left</string>
    <string name="fling_long_left_press">Long press left</string>
    <string name="long_swipe_portrait_title">Portrait</string>
    <string name="long_swipe_landscape_title">Landscape</string>
    <string name="portrait_right_swipe_title">Portrait right swipe</string>
    <string name="portrait_left_swipe_title">Portrait left swipe</string>
    <string name="landscape_right_swipe_title">Landscape right swipe</string>
    <string name="landscape_left_swipe_title">Landscape left swipe</string>
    <string name="vertical_up_swipe_title">Vertical up swipe</string>
    <string name="vertical_down_swipe_title">Vertical down swipe</string>
    <string name="up_swipe_title">Up swipe</string>
    <string name="down_swipe_title">Down swipe</string>
    <string name="long_swipe_reset">Reset</string>
    <string name="fling_advanced">Advanced</string>
    <string name="fling_long_swipe_title">Long swipe thresholds</string>
    <string name="fling_long_swipe_summary">Fine tune long swipe thresholds based on a percentage of Fling interface width or height</string>
    <string name="fling_trails_enable_title">Enable gesture trails</string>
    <string name="fling_trails_enable_summary">Show a trail on swipe gestures</string>
    <string name="fling_trails_color_title">Trail color</string>
    <string name="fling_trails_width_title">Trail width</string>
    <string name="fling_appearance">Appearance</string>
    <string name="fling_show_logo_title">Fling logo</string>
    <string name="fling_show_logo_summary">Show fling logo in the navbar</string>
    <string name="fling_animate_logo_title">Animate logo</string>
    <string name="fling_animate_logo_summary">Logo animates on touch events</string>
    <string name="fling_logo_color">Logo color</string>
    <string name="fling_logo_custom_logo_pick_title">Custom logo (Icon)</string>
    <string name="fling_logo_custom_logo_pick_summary">Select a custom logo from an icon pack</string>
    <string name="fling_logo_custom_logo_image_pick_title">Custom logo (Image)</string>
    <string name="fling_logo_custom_logo_image_pick_summary">Select a custom logo from an gallery</string>
    <string name="fling_logo_custom_logo_reset_title">Reset logo</string>
    <string name="fling_logo_custom_logo_reset_summary">Reset custom logo to default</string>
    <string name="fling_show_ripple_title">Show ripple</string>
    <string name="fling_show_ripple_summary">Ripple effect on touch events</string>
    <string name="fling_ripple_color">Ripple color</string>
    <string name="fling_longpress_timeout_label_left">Less delay</string>
    <string name="fling_longpress_timeout_label_right">More delay</string>
    <string name="fling_longpress_title">Long press delay</string>
    <string name="fling_longpress_summary">Increase or decrease the time it takes to execute a long press</string>
    <string name="fling_keyboard_cursors_title">Dynamic keyboard cursors action</string>
    <string name="fling_keyboard_cursors_summary">Double tap left and right actions becomes left and right keyboard cursor actions if keyboard is open</string>
    <string name="fling_logo_opacity_title">Fling logo opacity</string>
    <string name="fling_factory_reset_title">Reset to stock</string>
    <string name="fling_factory_reset_confirm">Are you sure you want to reset Fling to stock settings?</string>
    <string name="fling_backup_current_config_title">Save profile</string>
    <string name="fling_restore_config_title">Restore profile</string>
    <string name="fling_config_name_edit_dialog_title">Fling profile name</string>
    <string name="fling_config_name_edit_dialog_message">Enter name or leave blank</string>
    <string name="fling_config_dialog_title">Fling profiles</string>
    <string name="fling_config_backup_success_toast">Fling profile successfully saved</string>
    <string name="fling_config_restore_success_toast">Fling profile successfully restored</string>
    <string name="fling_config_backup_error_toast">Error saving Fling profile</string>
    <string name="fling_config_restore_error_toast">Error restoring Fling profile</string>
    <string name="pulse_help_policy_notice_summary">Pulse does not work with some audio sources when listening on device speaker</string>
    <string name="pulse_settings">Pulse</string>
    <string name="pulse_settings_summary">Navigation bar audio graphic equalizer</string>
    <string name="fling_show_pulse_title">Allow Pulse</string>
    <string name="fling_show_pulse_summary">Audio graphic equalizer on the navigation bar</string>
    <string name="pulse_render_mode_title">Render mode</string>
    <string name="pulse_render_mode_fading_bars">Fading blocks</string>
    <string name="pulse_render_mode_solid_lines">Solid lines</string>
    <string name="fling_pulse_color">Custom color</string>
    <string name="fling_pulse_color_summary">Also used as a fallback for automatic color</string>
    <string name="eos_fling_lavalamp_title">Lava lamp</string>
    <string name="eos_fling_lavalamp_summary">Use a smooth lava lamp style color blend animation</string>
    <string name="pulse_advanced_category">Advanced</string>
    <string name="pulse_legacy_mode_advanced_category">Fading Blocks</string>
    <string name="pulse_custom_fudge_factor">Sanity level</string>
    <string name="lavamp_solid_speed_title">Color blend interval</string>
    <string name="pulse_solid_units_count">Lines count</string>
    <string name="pulse_solid_units_opacity">Lines opacity</string>
    <string name="pulse_solid_dimen_category">Solid Lines</string>
    <string name="pulse_custom_buttons_opacity_title">Smartbar buttons opacity</string>
    <string name="pulse_auto_color_title">Automatic color</string>
    <string name="pulse_auto_color_summary">Sync color with album arts</string>
    <string name="pulse_accent_color_title">Accent color</string>
    <string name="pulse_accent_color_summary">Use default system accent color for pulse</string>
    <string name="pulse_blacklist_title">Apps blacklist</string>
    <string name="pulse_blacklist_summary">Apps to be skipped for Pulse</string>
    <string name="pulse_blacklist_apps_cat_title">Blacklist</string>
    <string name="pulse_blacklist_apps_title">Apps blacklist</string>
    <string name="pulse_blacklist_apps_summary">Apps to not show in the panel</string>
    <string name="pulse_blacklist_add_apps_title">Add app</string>
    <string name="pulse_blacklist_add_apps_summary">Tap here to add, tap on added app to remove it</string>
    <string name="fling_lavalamp_color_from">Start color</string>
    <string name="fling_lavalamp_color_to">End color</string>
    <string name="pulse_colors_reset_title">Reset pulse colors</string>
    <string name="pulse_colors_reset_message">Are you sure you want to reset these colors to default?</string>
    <string name="fling_smoothing_enabled_title">Smoothing</string>
    <string name="fling_smoothing_enabled_summary">Enable smoother animation for each bar</string>
    <string name="pulse_fading_blocks_opacity">Blocks opacity</string>
    <string name="pulse_custom_dimen">Bar width</string>
    <string name="pulse_custom_div">Bar spacing</string>
    <string name="pulse_filled_block_size">Block size</string>
    <string name="pulse_empty_block_size">Block spacing</string>
    <string name="navigation_bar_size_title">Bar size</string>
    <string name="portrait_title">Portrait height</string>
    <string name="land_vert_title">Landscape width</string>
    <string name="land_hor_title">Landscape height</string>
    <string name="positive_done">Done</string>
    <string name="smartbar_category">Smartbar</string>
</resources>